--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -271,7 +271,7 @@
 
 .address {
     font-style: normal;
-    margin-bottom: 3rem;
+    margin-bottom: 2rem;
 
     &__title {
         @include a.normal-text(3, 600);
